added interface for BulkLabelField data structure
